--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "pureimage": "^0.4.18",
     "qr-image": "^3.2.0",
     "sharp": "^0.34.2"
   }
